# liblxi-python

./: .gitmodules  CMakeLists.txt  COPYING  FindLibavahi.cmake  FindRpcGen.cmake  README.md  lxi.py  pylxi.cpp  pyproject.toml  test.py
examples/: discover.py
simple/: lxi.py  test.py
