[project]
version = "1.0"
name = "lxi"
description = "Python bindings for liblxi"
authors = [{name = "Martin Lund", email = "martin.lund@keep-it-simple.com"}]
license = {text = "BSD"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3"

[project.urls]
Homepage = "https://github.com/lxi-tools/liblxi-python"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["lxi"]
